# shouj

./: .gitignore  ANDROID_BUILD_FIX.md  BUILD_FIX_SUMMARY.md  README.md  check-build-status.md  logcat_anr.txt
.cursor/rules/: 项目.md
.github/workflows/: android-build.yml
build-logs/: 2_Build Android APK (armv7).txt  3_Build Android APK (aarch64).txt  4_Build Android APK (x86_64).txt  5_Build Android APK (universal).txt
build-logs/Build Android APK (aarch64)/: 17_Post Setup Java.txt  18_Post Checkout Repository.txt  19_Complete job.txt  1_Set up job.txt  2_Checkout Repository.txt  3_Setup Java.txt  4_Setup Android SDK.txt  5_Download Gradle Wrapper JAR.txt  6_Setup Gradle.txt  7_Build for Android with Gradle.txt  system.txt
build-logs/Build Android APK (armv7)/: 17_Post Setup Java.txt  18_Post Checkout Repository.txt  19_Complete job.txt  1_Set up job.txt  2_Checkout Repository.txt  3_Setup Java.txt  4_Setup Android SDK.txt  5_Download Gradle Wrapper JAR.txt  6_Setup Gradle.txt  7_Build for Android with Gradle.txt  system.txt
build-logs/Build Android APK (universal)/: 17_Post Setup Java.txt  18_Post Checkout Repository.txt  19_Complete job.txt  1_Set up job.txt  2_Checkout Repository.txt  3_Setup Java.txt  4_Setup Android SDK.txt  5_Download Gradle Wrapper JAR.txt  6_Setup Gradle.txt  7_Build for Android with Gradle.txt  system.txt
build-logs/Build Android APK (x86_64)/: 17_Post Setup Java.txt  18_Post Checkout Repository.txt  19_Complete job.txt  1_Set up job.txt  2_Checkout Repository.txt  3_Setup Java.txt  4_Setup Android SDK.txt  5_Download Gradle Wrapper JAR.txt  6_Setup Gradle.txt  7_Build for Android with Gradle.txt  system.txt
clash-verge-rev/: BUILD_STATUS.md  DEPLOYMENT.md  FEATURE_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  README.md
clash-verge-rev/android/: gradle.properties
clash-verge-rev/src/components/: ErrorBoundary.tsx
clash-verge-rev/src/hooks/: useConnections.ts  useProfiles.ts
clash-verge-rev/src/screens/: LogsScreen.tsx  ProxiesScreen.tsx
clash-verge-rev/src/services/: initialize.ts
clash-verge-rev/src/utils/: format.ts
mobile/: .gitattributes  .gitignore  ANDROID_MIHOMO_WORKFLOW_VERIFICATION.md  API_PROXY_PROTOCOL_CHECK_REPORT.md  API代理协议检查-简报.md  ARCHITECTURE.md  BUG_FIXES_20241102.md  BUG_FIX_DELETE_AND_REIMPORT.md  BUTTONS_IPC_REVIEW.md  BUTTON_FUNCTIONALITY_TEST.md  COMPLETE_TESTING_GUIDE.md  COMPLETE_USER_GUIDE.md  COMPLETION_REPORT.md  CRASH_FIX_GUIDE.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  DEVELOPMENT_STATUS.md  DNS_FIX_SUMMARY.md  DNS_PORT_FIX.md  EMULATOR_TEST_GUIDE.md  FEATURES_IMPLEMENTATION_STATUS.md  FEATURE_COMPARISON.md  FINAL_STATUS_REPORT.md  FUNCTIONALITY_CHECK.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_2024.md  INTEGRATION_SUMMARY.md  MIHOMO_CORE_FIX.md  MIHOMO_INTEGRATION_COMPLETE.md  MIHOMO_INTEGRATION_GUIDE.md  PROJECT_STATUS.md  PROXY_ERROR_FIX.md  PROXY_QUICK_START.md  PROXY_SCREEN_IMPLEMENTATION.md  PROXY_SWITCH_ROOT_CAUSE_AND_SOLUTIONS.md  QUICKSTART.md  QUICK_START_GUIDE.md  README.md  REALTIME_UPDATE_IMPLEMENTATION.md  REBUILD_GO_CORE.md  (+23 more)
mobile/.github/workflows/: android-build.yml
mobile/android/: build.gradle  gradlew  gradlew.bat  settings.gradle
mobile/android/app/: build.gradle  proguard-rules.pro
mobile/app/: build.gradle.kts  proguard-rules.pro
mobile/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
mobile/build-logs/: 2_Build Android APK (aarch64).txt  3_Build Android APK (armv7).txt  4_Build Android APK (universal).txt  5_Build Android APK (x86_64).txt
mobile/build-logs/Build Android APK (armv7)/: system.txt  (+10 more)
mobile/scripts/: COMPILE_SOLUTIONS.md  auto-compile-wsl.ps1  build-docker.sh  build-go.bat  build-go.ps1  build-go.sh  build-in-wsl.sh  build-mihomo.bat  build-mihomo.sh  build-wrapper.sh  build-x86_64-only.sh  install-go-wsl.sh  temp-build.sh  test-all-functions.ps1
mobile/src/: App.tsx
(+148 files in other folders)
